--- a/tutorial1/src/App.css
+++ b/tutorial1/src/App.css
@@ -1,39 +1,10 @@
-.App {
-  text-align: center;
+body {
+  background-color: #66CCFF;
+  font-family: sans-serif;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
-/* Styles go here */
-
-#content {
-  margin-bottom: 4em;
-}
-
-.ui.dividing.header {
-  margin-top: 1em;
-  margin-bottom: 2em;
-}
-
-i.icon {
-  margin: 0;
+.count {
+  margin-top: 100px;
+  margin-bottom: 100px;
+  font-size: 50pt;
 }
